<resources>
    <string name="app_name">Inventory app</string>
    <string name="action_settings">Settings</string>
    <string name="add_dummy_book">Add dummy book</string>
    <string name="book_detail">Book Detail</string>

    // name of textViews
    <string name="category">Category</string>
    <string name="book_details_text_view">Book details</string>
    <string name="price_text_view">Price</string>
    <string name="quantity_text_view">Quantity</string>
    <string name="supplier_details_text_view">Supplier Details</string>
    <string name="supplier_details">Supplier details</string>
    <string name="pcs_tv">pcs</string>
    <string name="czk">CZK</string>
    <string name="description_detail">Description:</string>

    // hints for editText
    <string name="book_name_hint">BOOK NAME</string>
    <string name="author_hint">AUTHOR</string>
    <string name="price_hint">PRICE</string>
    <string name="quantity_hint">QUANTITY</string>
    <string name="supplier_name_hint">SUPPLIER NAME</string>
    <string name="supplier_phone_hint">SUPPLIER PHONE</string>

    // category spinner
    <string name="unknown_category">unknown</string>
    <string name="romance_category">romance</string>
    <string name="crime_category">crime</string>
    <string name="history_category">history</string>
    <string name="education_category">education</string>

    // menu items editor activity
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="add_book_label">Add book</string>

    // menu items catalog activity
    <string name="action_delete_all_books">Delete all books</string>

    //Editor activity bar name
    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="editor_activity_title_edit_book">Edit book</string>
    
    // Editor Activity toast messages
    <string name="editor_insert_book_failed">Book was not save</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Book was not save</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="data_not_filled">Complete data not filled. Book was not saved</string>

    // EditorActivity dialogs massages
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>


    // Error messages
    <string name="error_book_name">Enter book name</string>
    <string name="error_book_author">Enter book author!</string>
    <string name="error_supplier_name">Enter supplier name!</string>
    <string name="error_supplier_phone">Enter supplier phone number!</string>
    <string name="error_qunatity">Enter quantity!</string>
    <string name="error_price">Enter price</string>


    <string name="zero_quantity">Book quantity cannot be less than 0</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="book_sold">Book sold</string>


    <string name="image_tv">Image</string>
    <string name="contact_supplier">Contact Supplier</string>
    <string name="supplier_info">Supplier Info:</string>
    <string name="call_supplier">Call supplier</string>
    <string name="search_hint">Search book</string>
    <string name="search">Search book name</string>
    <string name="flag_description">Book Flag</string>
    <string name="search_settings">Search book name</string>


</resources>
