<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.invetoryapp.CatalogActivity">

    <item
        android:id="@+id/action_delete_all_books"
        android:title="@string/action_delete_all_books"
        app:showAsAction="never" />

    <item
        android:id="@+id/insert_dummy_data"
        android:title="@string/add_dummy_book"
        app:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:title="@string/app_name"
        android:hint="@string/search_hint"
        android:icon="@drawable/search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
</menu>
