<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="225dp"
    android:padding="@dimen/padding"
    tools:context=".EditorActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView5"
        style="@style/EditorStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/image_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supplier_phone_ET"
        tools:text="@string/image_tv" />

    <ImageButton
        android:id="@+id/imageButton_minus"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundcorner"
        android:scaleType="fitXY"
        android:src="@drawable/minus"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/price_ET" />

    <TextView
        android:id="@+id/category_tv"
        style="@style/EditorStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/EditorStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/book_details_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner" />

    <TextView
        android:id="@+id/textView3"
        style="@style/EditorStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/price_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_ET" />

    <TextView
        android:id="@+id/textView4"
        style="@style/EditorStyle"
        android:layout_width="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantity_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_ET" />

    <TextView
        android:id="@+id/textView"
        style="@style/EditorStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/supplier_details_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_ET"
        tools:text="@string/supplier_details" />

    <EditText
        android:id="@+id/supplier_name_ET"
        style="@style/EditorStyle"
        android:layout_width="wrap_content"
        android:hint="@string/supplier_name_hint"
        android:inputType="textCapWords"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <EditText
        android:id="@+id/supplier_phone_ET"
        style="@style/EditorStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/supplier_phone_hint"
        android:inputType="textCapWords|phone"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/supplier_name_ET" />

    <EditText
        android:id="@+id/book_name_ET"
        style="@style/EditorStyle"
        android:layout_height="wrap_content"
        android:hint="@string/book_name_hint"
        android:inputType="textCapWords"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <EditText
        android:id="@+id/author_ET"
        style="@style/EditorStyle"
        android:layout_marginTop="8dp"
        android:hint="@string/author_hint"
        android:inputType="textCapWords"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/book_name_ET" />


    <EditText
        android:id="@+id/price_ET"
        style="@style/EditorStyle"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />


    <EditText
        android:id="@+id/quantity_ET"
        style="@style/EditorStyle"
        android:layout_width="68dp"
        android:layout_marginStart="8dp"
        android:hint="0"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/imageButton_minus" />

    <TextView
        android:id="@+id/unit_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/czk"
        app:layout_constraintBaseline_toBaselineOf="@+id/price_ET"
        app:layout_constraintStart_toEndOf="@+id/price_ET" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/category_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_plus"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundcorner"
        android:scaleType="centerCrop"
        android:src="@drawable/plus"
        app:layout_constraintStart_toEndOf="@+id/quantity_ET"
        app:layout_constraintTop_toBottomOf="@+id/price_ET" />

    <ImageButton
        android:id="@+id/upload_image"
        android:layout_width="41dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/upload_image"
        app:layout_constraintEnd_toStartOf="@+id/book_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="76dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#CFD8DC"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/supplier_phone_ET" />

    <ImageButton
        android:id="@+id/call"
        android:layout_width="46dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/call"
        app:layout_constraintBottom_toTopOf="@+id/book_image"
        app:layout_constraintEnd_toStartOf="@+id/supplier_phone_ET"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>